--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="max-width">
             <h2 class="title">My services</h2>
             <div class="serv-content">
-                <div class="card">
+               <!-- <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Driver Awakening System Using RaspberryPi</div>
@@ -100,7 +100,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="card">
+               <div class="card">
                     <div class="box">
                         <i class="fas fa-industry"></i>
                         <div class="text">METRO RAIL APP</div>
@@ -112,7 +112,7 @@
                             two stations. Additionally, the program displays the metro route and the total fare.
                         </p>
                     </div>
-                </div>
+                </div>-->
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-bar"></i>
