--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#services" class="menu-btn">Services</a></li>
+                <li><a href="#services" class="menu-btn">Projects</a></li>
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
@@ -49,6 +49,8 @@
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="https://github.com/MuraliWhizz" target="_blank"><i class="fab fa-github"></i>
                     Github</a>
+                <a href="https://www.credly.com/users/badisa-muralidhar/badges#" target="_blank"><i
+                    class="fas fa-award"></i> credly</a>
             </div>
         </div>
     </section>
@@ -59,7 +61,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="myImage.jpg"
+                    <img src="https://drive.google.com/file/d/166vNioAWWOOR52nbBdRX1N0kWSi72uM8/view?usp=drive_link"
                         alt="" />
                 </div>
                 <div class="column right">
@@ -67,13 +69,12 @@
                         I am Muralidhar and I'm a <span class="typing-2"></span>
                     </div>
                     <p>
-                        Graduated with a Bachelor's degree in Computer Science and Engineering .Proficient in
-                        Python3, Data Structures and Algorithms, MySQL DBMS, HTML, CSS, and JavaScript, I've mentored in
-                        DSA at Suntek Corp Solutions Pvt. Ltd., showcasing problem-solving and communication skills.
-                        I've developed a 'Driver Awakening System' and a 'Metro Rail App' as personal projects,
-                        demonstrating programming proficiency. When it comes to programming, I'm a 5-star coder on
-                        HackerRank and have solved 340+ problems on LeetCode. Now I am a Web Developer and exploring the world of
-                        programming.
+                        Highly motivated and detail-driven Computer Science Engineering graduate with a strong passion
+                        for programming and web development. With a solid foundation in languages like C++, Java, and
+                        Python, I excel in designing and developing scalable web applications. My expertise extends 
+                        to web development frameworks like React and Node.js, databases like MySQL and MongoDB, and 
+                        cloud computing platforms like AWS and IBM Cloud.
+
                     </p>
                     <a href="https://drive.google.com/file/d/1_s3d1izSKQnSUvwojWnArJjrCmTjF-dU/view?usp=drive_link"
                         target="_blank">Download Resume</a>
@@ -85,45 +86,57 @@
     <!-- SERVICE SECTION -->
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">My services</h2>
-            <div class="serv-content">
-               <!-- <div class="card">
+            <h2 class="title">My Projects</h2>
+            <div class="serv-content">            
+                <div class="card"  style="margin-bottom: 20px;">
                     <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Driver Awakening System Using RaspberryPi</div>
+                     <i class="fas fa-image"></i>
+                        <div class="text">Image Caption Generator</div>
                         <p>
-                            Developed a drowsiness detection system using Python3, DLib, OpenCV, Scipy, numpy, argparse,
-                            imutils, and face_utils. This system continuously tracks the facial landmarks and movement
-                            of the driver's eyes and lips. The project's primary focus is on monitoring the driver's
-                            eyes and lips, and it triggers an alert when the system detects eye closure for a certain
-                            number of frames or yawning.
+                            Developed a model to generate descriptive captions for images using Python and 
+                            machine learning. Combines computer vision and natural language processing. 
+                            Trained on vast image-caption dataset. Demonstrates expertise in image 
+                            processing, feature extraction, deep learning, and NLP.
                         </p>
                     </div>
                 </div>
-               <div class="card">
+                <div class="card"  style="margin-bottom: 20px;">
                     <div class="box">
-                        <i class="fas fa-industry"></i>
-                        <div class="text">METRO RAIL APP</div>
-                        <p>
-                            Created a Python program that simplifies metro commuting by providing fare information and
-                            the shortest metro route from a source station to a destination station. The program also
-                            includes a user-friendly metro map for navigation. The shortest path is determined using
-                            algorithms like Dijkstra, and the fare is calculated based on the total distance between the
-                            two stations. Additionally, the program displays the metro route and the total fare.
-                        </p>
-                    </div>
-                </div>-->
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-chart-bar"></i>
+                        <i class="fas fa-gamepad"></i>
                         <div class="text">Snake Game</div>
                         <p>
-                            Created a classic Snake game using HTML, CSS, and JavaScript. The game offers an engaging
-                            and fun experience, challenging players to collect food while avoiding collisions with the
-                            snake's own body and the walls.
+                            Built a nostalgic Snake game using HTML, CSS, and JavaScript, offering an 
+                            addictive and entertaining experience. Players navigate the snake to collect 
+                            food while avoiding self-collisions and wall crashes, testing their skills 
+                            and reflexes in a timeless arcade classic.
                         </p>
                     </div>
                 </div>
+                <div class="card"  style="margin-bottom: 20px;">
+                    <div class="box">
+                        <i class="fas fa-network-wired"></i>
+                        <div class="text">NetSpam A Network Based Spam Detection System</div>
+                        <p>
+                            NetSpam uses machine learning and algorithms to detect spam messages, 
+                            considering sender-recipient relationships and content. Unlike traditional 
+                            content-only analysis, NetSpam's holistic approach identifies and mitigates 
+                            spam in real-time, ensuring robust network security and protecting users 
+                            from malicious activities with unparalleled accuracy.
+                        </p>
+                    </div>
+                </div>
+               <div class="card"  style="margin-bottom: 20px;">
+                    <div class="box">
+                     <i class="fas fa-car"></i>
+                        <div class="text">Electric Vehicle Data Analysis and Visualization using Python</div>
+                        <p>
+                            Unlocking Electric Vehicle Insights: A Python-driven data analysis and visualization 
+                            project exploring the EV landscape. Analyzing a comprehensive dataset of EV models, 
+                            sales, charging infrastructure, and consumer trends to uncover key drivers of EV 
+                            adoption and reveal valuable insights into the dynamic EV market.
+                        </p>
+                    </div>
+                    </div>  
             </div>
         </div>
     </section>
@@ -140,21 +153,22 @@
                         actively seek opportunities to expand my knowledge and skills, staying up-to-date with the
                         latest developments in the field.
                     </p>
-                    <a href="https://leetcode.com/user0231MY/" target="_blank">Leetcode<i
+                    <a href="https://leetcode.com/user0231MY/" target="_blank">Leetcode <i
                             class="fab fa-free-code-camp"></i></a>
                     <a href="https://www.codingninjas.com/studio/profile/B_Muralidhar"
-                        target="_blank">codingninjas<i class="fab fa-free-code-camp"></i></a>
-                    <a href="https://www.hackerrank.com/profile/badisa_muralidh1" target="_blank">Hackerank<i
-                            class="fab fa-free-code-camp"></i></a>
+                        target="_blank">codingninjas <i class="fas fa-code"></i></a>
+                    <a href="https://www.hackerrank.com/profile/badisa_muralidh1" target="_blank">Hackerank <i
+                           class="fas fa-terminal"></i>
+                    </a>
                 </div>
                 <div class="column right">
                     <div class="bars">
                         <div class="info">
-                            <span>Python & DSA</span>
-                            <span>90%</span>
+                            <span>Back-end Development</span>
+                            <span>60%</span>
                         </div>
                         <div class="line html"></div>
-                    </div>
+                    </div> 
                     <div class="bars">
                         <div class="info">
                             <span>Front-End Development</span>
@@ -164,14 +178,14 @@
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>MYSQL & SQLITE</span>
-                            <span>90%</span>
+                            <span>MYSQL & MongoDB</span>
+                            <span>70%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
                     <div class="bars">
                         <div class="info">
-                            <span>Database Management(RDBMS)</span>
+                            <span>Linux Adminstration skills</span>
                             <span>80%</span>
                         </div>
                         <div class="line php"></div>
@@ -203,38 +217,39 @@
                             </div>
                         </div>
                         <div class="row">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="fas fa-mobile-alt"></i>
                             <div class="info">
                                 <div class="head">Phone</div>
                                 <div class="sub-title">9182974990</div>
                             </div>
                         </div>
                         <div class="row">
-                            <i class="fas fa-envelope"></i>
+                       <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
                                 <div class="sub-title">badisa.muralidhar1542508@gmail.com</div>
                             </div>
                         </div>
-                    </div>
+                    </div> 
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form action="#">
+                    <form  id="contactForm" action="#">
                         <div class="fields">
                             <div class="field name">
-                                <input type="text" placeholder="Name" required />
+                                <input type="text" id="name" placeholder="Name" required />
                             </div>
                             <div class="field email">
-                                <input type="email" placeholder="Email" required />
+                                <input type="email" id="email" placeholder="Email" required />
                             </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Subject" required />
+                            <input type="text" id="subject" placeholder="Subject" required />
                         </div>
                         <div class="field textarea">
-                            <textarea cols="30" rows="10" placeholder="Message.." required></textarea>
+                            <textarea  id="message" cols="30" rows="10" placeholder="Message.." required></textarea>
                         </div>
+                        <input type="hidden" id="hiddenEmail" value="badisa.muralidhar1542508@gmail.com">
                         <div class="button-area">
                             <button type="submit">Send message</button>
                         </div>
