--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="https://drive.google.com/file/d/166vNioAWWOOR52nbBdRX1N0kWSi72uM8/view?usp=drive_link"
+                    <img src="myImage.jpg"
                         alt="" />
                 </div>
                 <div class="column right">
