--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         cloud computing platforms like AWS and IBM Cloud.
 
                     </p>
-                    <a href="https://drive.google.com/file/d/1_s3d1izSKQnSUvwojWnArJjrCmTjF-dU/view?usp=drive_link"
+                    <a href="Resume.pdf"
                         target="_blank">Download Resume</a>
                 </div>
             </div>
