--- a/index.html
+++ b/index.html
@@ -234,26 +234,26 @@
                 </div>
                 <div class="column right">
                     <div class="text">Message me</div>
-                    <form  id="contactForm" action="#">
-                        <div class="fields">
-                            <div class="field name">
-                                <input type="text" id="name" placeholder="Name" required />
-                            </div>
-                            <div class="field email">
-                                <input type="email" id="email" placeholder="Email" required />
-                            </div>
-                        </div>
-                        <div class="field">
-                            <input type="text" id="subject" placeholder="Subject" required />
-                        </div>
-                        <div class="field textarea">
-                            <textarea  id="message" cols="30" rows="10" placeholder="Message.." required></textarea>
-                        </div>
-                        <input type="hidden" id="hiddenEmail" value="badisa.muralidhar1542508@gmail.com">
-                        <div class="button-area">
-                            <button type="submit">Send message</button>
-                        </div>
-                    </form>
+                     <form id="form" action="https://formspree.io/f/mgvwklpa" method="post">
+                    <label for="email"></label>
+                    <div class="fields">
+                      <div class="field name">
+                        <input type="text" id="name" name="name" placeholder="Name" required />
+                      </div>
+                      <div class="field email">
+                        <input type="email" id="email" name="email" placeholder="Email" required />
+                      </div>
+                    </div>
+                    <div class="field">
+                      <input type="text" id="subject" name="subject" placeholder="Subject" required />
+                    </div>
+                    <div class="field textarea">
+                      <textarea id="message" name="message" cols="30" rows="10" placeholder="Message.." required></textarea>
+                    </div>
+                    <div class="button-area">
+                      <button type="submit">Send message</button>
+                    </div>
+                  </form>
                 </div>
             </div>
         </div>
